--- a/Arch/index.html
+++ b/Arch/index.html
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
+    <style>
+        .paths--round {
+            fill: #ccc;
+            stroke: #000;
+            stroke-width: 1.5px;
+            stroke-linejoin: round;
+            }
+    </style>
 
 
     <div class="canvas"></div>
@@ -20,7 +28,7 @@
     <script>
     // Your web app's Firebase configuration
     var firebaseConfig = {
-     
+
     };
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
@@ -29,6 +37,6 @@
     </script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.16.0/d3.min.js"></script>
-    <script src="linear_scale.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
