--- a/area_chart/index.html
+++ b/area_chart/index.html
@@ -103,11 +103,11 @@
     h1, introducing the viz
     .legend, describing the meaning of the line chart
     -->
-        <h1>Consumption of renewable energy</h1>
+        <!-- <h1>Consumption of renewable energy</h1>
         <div class="legend">
             <h2>Growing 5% between 1990 and 2015</h2>
             <p>Percentage of total</p>
-        </div>
+        </div> -->
     </div>
 
 
